# ai-debt-payoff

./: .env.example  .gitignore  .replit  CLAUDE.md  README.md  pyproject.toml  replit.md
.claude/: testing-config.md
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.claude/epics/debt-coach-backend/: 13.md  14-analysis.md  14.md  15-analysis.md  15.md  16.md  17.md  18.md  19.md  20.md  epic.md
.claude/epics/front-end-core-funcionality/: 22-analysis.md  (+15 more)
.claude/prds/: debt-coach-backend.md  front-end-core-funcionality.md  integrate-mui-frontend.md  mobile-app-deployment.md
backend/: alembic.ini  analytics.py  config.py  database.py  debt_payoff.db  docker-compose.yml  main.py  models.py  planner.py  requirements.txt  schemas.py  test_planner.py  test_runner.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_analytics_api.py  test_api.py  test_event_service.py  test_integration.py  test_llm_validation.py  test_middleware.py  test_nudge_service.py  test_planner.py  test_simple.py  test_slip_api.py  test_slip_detector.py  test_workers.py
docs/: api.md  architecture.md  setup.md
examples/: curl-commands.sh
frontend/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.tsx  index.css
mobile-app/: App.tsx  package-lock.json  package.json
(+207 files in other folders)
